--- a/index.html
+++ b/index.html
@@ -206,6 +206,12 @@
                         <h3>My-Cow</h3>
                         <label>Subscription Management System</label>
                     </div>
+                    <div class="project-box">
+                        <a href="https://shanky-thakur.github.io/my-blogs/" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
+                        <i><img src="assets/images/favicon.png" alt="logo"></i>
+                        <h3>My-Blog</h3>
+                        <label>Personal Blog</label>
+                    </div>
                 </div>
             </section>
 
