--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                                 target="_blank"><i class="uil uil-linkedin-alt"></i></a></i></div>
                         <div class="icon"><a href="https://github.com/shanky-thakur" target="_blank"><i
                                     class="uil uil-github-alt"></i></a></div>
+                        <div class="icon"><a href="https://shanky-thakur.github.io/my-blogs/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
                     </div>
                 </div>
                 <div class="featured-image">
@@ -276,6 +277,7 @@
                             class="uil uil-linkedin-alt"></i></a></i></div>
                 <div class="icon"><a href="https://github.com/shanky-thakur" target="_blank"><i
                             class="uil uil-github-alt"></i></a></div>
+                <div class="icon"><a href="https://shanky-thakur.github.io/my-blogs/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
             </div>
             <div class="bottom-footer">
                 <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Deepanshu Thakur</a> - All rights
