--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 target="_blank"><i class="uil uil-linkedin-alt"></i></a></i></div>
                         <div class="icon"><a href="https://github.com/shanky-thakur" target="_blank"><i
                                     class="uil uil-github-alt"></i></a></div>
-                        <div class="icon"><a href="https://shanky-thakur.github.io/my-blogs/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
+                        <div class="icon"><a href="https://shanky-blogs.netlify.app/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
                     </div>
                 </div>
                 <div class="featured-image">
@@ -208,7 +208,7 @@
                         <label>Subscription Management System</label>
                     </div>
                     <div class="project-box">
-                        <a href="https://shanky-thakur.github.io/my-blogs/" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
+                        <a href="https://shanky-blogs.netlify.app/" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
                         <i><img src="assets/images/favicon.png" alt="logo"></i>
                         <h3>My-Blog</h3>
                         <label>Personal Blog</label>
@@ -277,7 +277,7 @@
                             class="uil uil-linkedin-alt"></i></a></i></div>
                 <div class="icon"><a href="https://github.com/shanky-thakur" target="_blank"><i
                             class="uil uil-github-alt"></i></a></div>
-                <div class="icon"><a href="https://shanky-thakur.github.io/my-blogs/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
+                <div class="icon"><a href="https://shanky-blogs.netlify.app/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
             </div>
             <div class="bottom-footer">
                 <p>Copyright &copy; <a href="#home" style="text-decoration: none;">Deepanshu Thakur</a> - All rights
