--- a/index.html
+++ b/index.html
@@ -214,6 +214,13 @@
                         <h3>My-Blog</h3>
                         <label>Personal Blog</label>
                     </div>
+                     <div class="project-box">
+                        <a href="https://retro-ide.netlify.app/" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
+                         <a href="https://github.com/k1ttu/Retro-IDE" target="_blank" style="z-index: 3;"><i class="uil uil-github" style="margin-left: 200px;"></i></a>
+                        <i><img src="logo.png" alt="logo"></i>
+                        <h3>My-Blog</h3>
+                        <label>Personal Blog</label>
+                    </div>
                 </div>
             </section>
 
