--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <label>Spa Center Website</label>
                     </div>
                     <div class="project-box">
-                        <a href="https://library-lac-psi.vercel.app/" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
+                        <a href="https://niranjana-library.netlify.app" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
                         <a href="https://github.com/shanky-thakur/niranjana" target="_blank" style="z-index: 3;"><i class="uil uil-github" style="margin-left: 200px;"></i></a>
                         <i><img src="./assets/images/niranjana logo.png" alt="logo"></i>
                         <h3>Niranjana</h3>
