--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
                         <h3>Retro-IDE</h3>
                         <label>Online Compiler</label>
                     </div>
+                    <div class="project-box">
+                        <a href="https://backend-niranjana.vercel.app" target="_blank" style="z-index: 3;"><i class="uil uil-external-link-alt" style="margin-left: 200px;"></i></a>
+                        <a href="https://github.com/shanky-thakur/backend_niranjana" target="_blank" style="z-index: 3;"><i class="uil uil-github" style="margin-left: 200px;"></i></a>
+                        <i><img src="./assets/images/niranjana logo.png" alt="logo"></i>
+                        <h3>Niranjana</h3>
+                        <label>Library Api</label>
+                    </div>
                 </div>
             </section>
 
