--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <p>Hello, I'm <br /> <span class="typedText"></span></p>
                     </div>
                     <div class="featured-text-info">
-                        <p>MERN-stack | Flutter | Java | Aspiring Software Developer | MCE-DTU'26
+                        <p>Java | Spring Boot | MERN Stack | Aspiring Software Developer | MCE-DTU'26
                         </p>
                     </div>
                     <div class="featured-text-btn">
@@ -88,7 +88,8 @@
                                 target="_blank"><i class="uil uil-linkedin-alt"></i></a></i></div>
                         <div class="icon"><a href="https://github.com/shanky-thakur" target="_blank"><i
                                     class="uil uil-github-alt"></i></a></div>
-                        <div class="icon"><a href="https://shanky-blogs.netlify.app/" target="_blank"><i class="uil uil-award-alt"></i></a></div>
+                        <div class="icon"><a href="https://shanky-blogs.netlify.app/" target="_blank"><i class="uil uil-book-open"></i></a></div>
+                        <div class="icon"><a href="https://leetcode.com/u/Thakurdeepanshu420/" target="_blank"><i class="uil uil-user-circle"></i></a></div>
                     </div>
                 </div>
                 <div class="featured-image">
@@ -113,9 +114,7 @@
                     <div class="col">
                         <div class="about-info">
                             <h3>My introduction</h3>
-                            <p>I am well-versed in HTML, CSS and JavaScript , and other cutting edge
-                                frameworks and libraries, like React, Express and Node. Along with this, I've also
-                                worked with technologies like Flutter and Java Swing.
+                            <p>Aspiring Backend Developer, with a firm hand on backend technologies like Java, Spring Boot, Node JS with databases like MongoDB and familiar with frontend frameworks like React JS.  
                             </p>
                             <div class="about-btn">
                                 <a href="My Resume.pdf" download><button class="btn">Download CV <i
@@ -133,7 +132,7 @@
                                 <span>CSS</span>
                                 <span>Bootstrap</span>
                                 <span>JavaScript</span>
-                                <span>Tailwind</span>
+                                <span>FlowBite</span>
                                 <span>React</span>
                             </div>
                         </div>
@@ -142,9 +141,9 @@
                                 <h3>Backend</h3>
                             </div>
                             <div class="skills-list">
-                                <span>Node</span>
                                 <span>JAVA</span>
-                                <span>Express</span>
+                                <span>Spring Boot</span>
+                                <span>Node JS</span>
                                 <span>REST-API</span>
                             </div>
                         </div>
@@ -153,8 +152,8 @@
                                 <h3>Database</h3>
                             </div>
                             <div class="skills-list">
-                                <span>MySQL</span>
                                 <span>MongoDB</span>
+                                <span>FireBase</span>
                             </div>
                         </div>
                     </div>
